--- a/index.html
+++ b/index.html
@@ -32,16 +32,9 @@
       </div>
     </header>
 
-    <div class="top_eye_catch">珠杏</div>
+    <div class="top_eye_catch">My WEBsite</div>
 
-    <div class="contents">
-      <section class="sec">
-        <h2>更新履歴</h2>
-        <ul>
-          <li><a href="./report.html">レポートを追加しました</a></li>
-          <li><a href="./works.html">WORKSページを追加しました</a></li>
-        </ul>
-      </section>
+
 
       <section class="sec">
         <h2>MENU</h2>
@@ -53,8 +46,7 @@
             <div class="link_txt">
               <p class="link_title">PROFILE</p>
               <div>
-                これまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキスト<br />
-                これまでの経歴を紹介しますダミーテキストこれまでの経歴を紹介しますダミーテキスト
+                平野 珠杏(ひらの じゅあん）<br /> 10月4日 天使の日 <br /> てんびん座のA型 <br /> 岡田健史 <br /> 
               </div>
               <a class="link_btn" href="./profile.html">Go!</a>
             </div>
