--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="link_txt">
               <p class="link_title">PROFILE</p>
               <div>
-                平野 珠杏(ひらの じゅあん）<br /> 10月4日 天使の日 <br /> てんびん座のA型 <br /> 岡田健史 <br /> 
+                珠杏のページ
               </div>
               <a class="link_btn" href="./profile.html">Go!</a>
             </div>
@@ -57,7 +57,7 @@
               <img src="./images/toy02.jpg" />
             </div>
             <div class="link_txt">
-              <p class="link_title">WORKS</p>
+              <p class="link_title"></p>
               <div>
                 作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト
               </div>
