--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="link_txt">
               <p class="link_title">PROFILE</p>
               <div>
-                珠杏のページ
+                珠杏のページだにょ
               </div>
               <a class="link_btn" href="./profile.html">Go!</a>
             </div>
