--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <img src="./images/toy02.jpg" />
             </div>
             <div class="link_txt">
-              <p class="link_title"></p>
+              <p class="link_title">MY BIAS</p>
               <div>
                 作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト
               </div>
