--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="link_txt">
               <p class="link_title">MY BIAS</p>
               <div>
-                作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト作品を紹介しますダミーテキスト
+                世界一かっこいい人
               </div>
               <a class="link_btn" href="./works.html">Go!</a>
             </div>
