--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </header>
 
-    <div class="top_eye_catch">My WEBsite</div>
+    <div class="top_eye_catch">MY WEBSITE</div>
 
 
 
@@ -59,7 +59,7 @@
             <div class="link_txt">
               <p class="link_title">MY BIAS</p>
               <div>
-                世界一かっこいい人
+                世界１かっこいい人
               </div>
               <a class="link_btn" href="./works.html">Go!</a>
             </div>
