--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="link_menu">
           <div class="each_link">
             <div class="link_pic">
-              <img src="./images/白黒.jpg" />
+              <img src="./images/珠杏白黒.jpg" />
             </div>
             <div class="link_txt">
               <p class="link_title">PROFILE</p>
@@ -54,7 +54,7 @@
 
           <div class="each_link">
             <div class="link_pic">
-              <img src="./images/toy02.jpg" />
+              <img src="./images/岡健.jpg" />
             </div>
             <div class="link_txt">
               <p class="link_title">MY BIAS</p>
