--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div>
                 珠杏のページだにょ
               </div>
-              <a class="link_btn" href="./profile.html">Go!</a>
+              <a class="link_btn" href="./profile.html">GoGo!</a>
             </div>
           </div>
 
@@ -61,7 +61,7 @@
               <div>
                 世界１かっこいい人
               </div>
-              <a class="link_btn" href="./works.html">Go!</a>
+              <a class="link_btn" href="./works.html">GoGo!</a>
             </div>
           </div>
         </div>
