--- a/profile.html
+++ b/profile.html
@@ -34,11 +34,11 @@
     <div class="contents">
       <section>
         <div class="profile_container">
-          <h3>20xx</h3>
-          <div>誕生</div>
-          <h3>20xx</h3>
+          <h3>2003</h3>
+          <div>珠杏 爆誕生!!! </div>
+          <h3>2007</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            芦◯大学附属幼稚園入学 </div> 全然覚えてないけど前日ぐらいに </div> 顔を怪我してぴえん </div> この頃から元気すぎたかも </div> もっと落ち着いた女性めざします
           </div>
           <h3>20xx</h3>
           <div>
