--- a/profile.html
+++ b/profile.html
@@ -38,11 +38,11 @@
           <div>珠杏 爆誕生!!! </div>
           <h3>2007</h3>
           <div>
-            芦◯大学附属幼稚園入学 </div> 全然覚えてないけど前日ぐらいに </div> 顔を怪我してぴえん </div> この頃から元気すぎたかも </div> もっと落ち着いた女性めざします
+            芦◯大学附属幼稚園入学 <br> 全然覚えてないけど前日ぐらいに <br> 顔を怪我してぴえん <br> この頃から元気すぎたかも <br> もっと落ち着いた女性めざします
           </div>
-          <h3>20xx</h3>
+          <h3>2010</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            
           </div>
           <h3>20xx</h3>
           <div>
