--- a/profile.html
+++ b/profile.html
@@ -42,7 +42,7 @@
           </div>
           <h3>2010</h3>
           <div>
-            
+            芦屋市立山○小学校入学 <br> ワクワクドキドキ <br> 初日からたくさんの友達ができ <br> HAPPY!!! <br> 順調な始まりでした 
           </div>
           <h3>20xx</h3>
           <div>
