--- a/profile.html
+++ b/profile.html
@@ -44,17 +44,17 @@
           <div>
             芦屋市立山○小学校入学 <br> ワクワクドキドキ <br> 初日からたくさんの友達ができ <br> HAPPY!!! <br> 順調な始まりでした 
           </div>
-          <h3>20xx</h3>
+          <h3>2016</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            芦屋市立山◯中学校入学 <br> 部活動はバスケ部に所属 <br> 勉強がむずすぎてついていけず <br> つらたん <br>しっかり四年間部活頑張りました 
           </div>
-          <h3>20xx</h3>
+          <h3>2019</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            芦◯学園附属高等学校入学<br> 勉強もせず、部活もせず<br> 遊び呆けた高校生活の始まり<br> バイトだけは頑張ってました<br> 中国語で中華料理かけます!!
           </div>
-          <h3>20xx</h3>
+          <h3>2022</h3>
           <div>
-            ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト
+            京都芸術大学入学<br> 早速浪人しそうな予感!!<br>課題溜めすぎてしぬ!!<br> 後期は頑張ります!!<br> 先生見捨てないで!!!! 
           </div>
           <h3>20xx</h3>
           <div>
