--- a/works.html
+++ b/works.html
@@ -48,39 +48,40 @@
     </header>
 
     <section>
-      <div class="report_eye_catch">works</div>
+      <div class="report_eye_catch">MY BIAS
+      </div>
       <div class="contents">
-        <h2>WORKS</h2>
+        <h2>MY BIAS</h2>
         <ul class="thumb_list">
           <li>
-            <a href="./images/toy01.jpg" data-lity
-              ><img src="./images/toy01.jpg" alt="サムネイル"
+            <a href="./images/岡健２.jpg" data-lity
+              ><img src="./images/岡健２.jpg" alt="サムネイル"
             /></a>
           </li>
           <li>
-            <a href="./images/toy02.jpg" data-lity
-              ><img src="./images/toy02.jpg" alt="サムネイル"
+            <a href="./images/岡健３.jpg" data-lity
+              ><img src="./images/岡健３.jpg" alt="サムネイル"
             /></a>
           </li>
           <li>
-            <a href="./images/toy03.jpg" data-lity
-              ><img src="./images/toy03.jpg" alt="サムネイル"
+            <a href="./images/岡健４.jpg" data-lity
+              ><img src="./images/岡健４.jpg" alt="サムネイル"
             /></a>
           </li>
           <li>
-            <a href="./images/toy04.jpg" data-lity
-              ><img src="./images/toy04.jpg" alt="サムネイル"
+            <a href="./images/岡健５.jpg" data-lity
+              ><img src="./images/岡健５.jpg" alt="サムネイル"
             /></a>
           </li>
           <li>
-            <a href="./images/toy03.jpg" data-lity
-              ><img src="./images/toy03.jpg" alt="サムネイル"
+            <a href="./images/岡健６.jpg" data-lity
+              ><img src="./images/岡健６.jpg" alt="サムネイル"
             /></a>
           </li>
         </ul>
       </div>
     </section>
 
-    <footer>名前など</footer>
+    <footer>HIRANO JUAN</footer>
   </body>
 </html>
