--- a/slide.html
+++ b/slide.html
@@ -59,16 +59,16 @@
     <div class="contents">
       <section>
         <div class="slide">
-          <div><img src="./images/toy01.jpg" /></div>
-          <div><img src="./images/toy02.jpg" /></div>
-          <div><img src="./images/toy03.jpg" /></div>
-          <div><img src="./images/toy01.jpg" /></div>
-          <div><img src="./images/toy02.jpg" /></div>
-          <div><img src="./images/toy03.jpg" /></div>
+          <div><img src="./images/焼肉.jpg" /></div>
+          <div><img src="./images/プリ.jpg" /></div>
+          <div><img src="./images/白石T.jpg" /></div>
+          <div><img src="./images/写真.jpg" /></div>
+          <div><img src="./images/オーキャン.jpg" /></div>
+          <div><img src="./images/ウィンク.jpg" /></div>
         </div>
       </section>
     </div>
 
-    <footer>名前など</footer>
+    <footer>HIRANO JUAN</footer>
   </body>
 </html>
