--- a/profile.html
+++ b/profile.html
@@ -23,10 +23,9 @@
           <a href="./index.html"><img src="./images/logo.svg" alt="" /></a>
         </p>
         <ul id="global_menu">
-          <li class="current"><a href="./profile.html">profile</a></li>
-          <li><a href="./works.html">works</a></li>
-          <li><a href="./slide.html">slide</a></li>
-          <li><a href="./report.html">report</a></li>
+          <li class="current"><a href="./profile.html">PROFILE</a></li>
+          <li><a href="./works.html">MY BIAS</a></li>
+          <li><a href="./slide.html">MEMORY</a></li>
         </ul>
       </div>
     </header>
