--- a/works.html
+++ b/works.html
@@ -47,7 +47,7 @@
     </header>
 
     <section>
-      <div class="report_eye_catch">MY BIAS
+      <div class="report_eye_catch">岡田健史
       </div>
       <div class="contents">
         <h2>MY BIAS</h2>
