--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="link_menu">
           <div class="each_link">
             <div class="link_pic">
-              <img src="./images/珠杏白黒.jpg" />
+              <img src="./images/珠杏.jpg" />
             </div>
             <div class="link_txt">
               <p class="link_title">PROFILE</p>
